# zguide

./: .bookmarks  .cache_cs  .cache_hx  .cache_java  .cache_lua  .cache_main  .cache_page  .cache_pdf-c  .cache_pdf-hx  .cache_pdf-lua  .cache_pdf-php  .cache_pdf-py  .cache_php  .cache_py  .cache_raw  .gitignore  .gitmodules  .signatures  .travis.yml  CONTRIBUTORS  Figure_list  LICENSE  Makefile  README  README.asciidoc  README.md  README.txt  book.ps  book.xml  chapter1.txt  chapter1.wd  chapter2.txt  chapter2.wd  chapter3.txt  chapter3.wd  chapter4.txt  chapter4.wd  chapter5.txt  chapter6.txt  chapter7.txt  (+23 more)
articles/: multithreading.md  multithreading.txt  reliability.md  reliability.txt
builds/msvc/: msvc10.sln
examples/: ChangeLog  LICENSE  README  build  version.flx
examples/Ada/: README  asyncsrv.ada  durapub.ada  durapub2.ada  durasub.ada  flcliapi.ada  flclient1.ada  flclient2.ada  flclient3.ada  flserver1.ada  flserver2.ada  flserver3.ada  hwclient.ada  hwserver.ada  identity.ada  interrupt.ada  lpclient.ada  lpserver.ada  lruqueue.ada  lruqueue2.ada  mdbroker.ada  mdcliapi.ada  mdcliapi2.ada  mdclient.ada  mdclient2.ada  mdworker.ada  mdwrkapi.ada  mmiecho.ada  msgqueue.ada  mspoller.ada  msreader.ada  mtrelay.ada  mtserver.ada  peering1.ada  peering2.ada  peering3.ada  piclient.ada  piqueue.ada  ppqueue.ada  ppworker.ada  (+37 more)
examples/Basic/: README  asyncsrv.bas  durapub.bas  durapub2.bas  durasub.bas  flcliapi.bas  flclient1.bas  flclient2.bas  flclient3.bas  flserver1.bas  flserver2.bas  flserver3.bas  hwclient.bas  hwserver.bas  identity.bas  interrupt.bas  lpclient.bas  lpserver.bas  lruqueue.bas  lruqueue2.bas  mdbroker.bas  mdcliapi.bas  mdcliapi2.bas  mdclient.bas  mdclient2.bas  mdworker.bas  mdwrkapi.bas  mmiecho.bas  msgqueue.bas  mspoller.bas  msreader.bas  mtrelay.bas  mtserver.bas  peering1.bas  peering2.bas  peering3.bas  piclient.bas  piqueue.bas  ppqueue.bas  ppworker.bas  (+31 more)
examples/C/: .clonesrv5.c.kate-swp  .gitignore  README  asyncsrv.c  bstar.c  bstar.h  bstarcli.c  bstarsrv.c  bstarsrv2.c  build  c  clone.c  clone.h  clonecli1  clonecli1.c  clonecli2  clonecli2.c  clonecli3  clonecli3.c  clonecli4.c  clonecli5.c  clonecli6.c  clonesrv1  clonesrv1.c  clonesrv2  clonesrv2.c  clonesrv3  clonesrv3.c  clonesrv4.c  clonesrv5.c  clonesrv6.c  credit.c  dechat  dechat.c  dhash.c  dhash.h  double  durapub.c  durapub2.c  durasub.c  (+123 more)
examples/C#/: .gitignore  AsyncSrv.cs  Beispiel.cs  HWClient.cs  HWServer.cs  Identity.cs  Interrupt.cs  LBBroker.cs  LPClient.cs  LPServer.cs  MSPoller.cs  MSReader.cs  MTRelay.cs  MTServer.cs  MsgQueue.cs  PPQueue.cs  PPWorker.cs  PSEnvPub.cs  PSEnvSub.cs  Peering1.cs  Peering2.cs  Program.cs  ProgramRunner.cs  README  README.md  RRBroker.cs  RRClient.cs  RRServer.cs  RTDealer.cs  RTReq.cs  SPQueue.cs  SPWorker.cs  SyncPub.cs  SyncSub.cs  TaskSink.cs  TaskSink2.cs  TaskVent.cs  TaskWork.cs  TaskWork2.cs  Version.cs  (+103 more)
examples/C++/: .gitignore  README  asyncsrv.cpp  bstar.cpp  bstar.hpp  bstarcli.cpp  bstarsrv.cpp  bstarsrv2.cpp  build  c  clone.cpp  clone.hpp  clonecli1.cpp  clonecli2.cpp  clonecli3.cpp  clonecli4.cpp  clonecli5.cpp  clonecli6.cpp  clonesrv1.cpp  clonesrv2.cpp  clonesrv3.cpp  clonesrv4.cpp  clonesrv5.cpp  clonesrv6.cpp  durapub.cpp  durapub2.cpp  durasub.cpp  espresso.cpp  flcliapi.cpp  flcliapi.hpp  flclient1.cpp  flclient2.cpp  flclient3.cpp  flserver1.cpp  flserver2.cpp  flserver3.cpp  hwclient.cpp  hwserver.cpp  identity.cpp  interrupt.cpp  (+74 more)
examples/CL/: durapub.lisp  durapub2.lisp  hwserver.lisp  identity.lisp  lbbroker.lisp  lruqueue.lisp  msgqueue.lisp  mspoller.asd  msreader.lisp  mtserver.asd  mtserver.lisp  rrbroker.lisp  rtdealer.asd  rtdealer.lisp  rtmama.asd  rtmama.lisp  rtpapa.asd  rtpapa.lisp  rtrouter.asd  rtrouter.lisp  syncpub.asd  tasksink2.asd  taskvent.asd  taskvent.lisp  version.asd  wuclient.asd  zmsg.lisp
examples/CLisp/: compile  msgqueue.lisp  mtrelay.asd  psenvsub.lisp  rtdealer.asd  rtdealer.lisp  tasksink2.lisp  taskwork2.lisp  wuproxy.asd
examples/CSharp/: .gitignore  AssemblyInfo.cs  asyncsrv.cs  flclient1.cs  flclient2.cs  flclient3.cs  flserver1.cs  interrupt.cs  mspoller.cs  mtrelay.cs  mtserver.cs  pathosub.cs  peering1.cs  ppqueue.cs  ppworker.cs  rrbroker.cs  rrworker.cs  syncpub.cs  taskvent.cs  ticlient.cs  version.cs  wuserver.cs
examples/Chapter6/: .gitignore  ch6_selftest.c  codec_c.gsl  mdp_client.c  mdp_client.h  mdp_client.md  mdp_client.xml  mdp_selftest.c  mdp_worker.c  mdp_worker.h  mdp_worker.md  mdp_worker.xml  nom_server.c  nom_server.h  nom_server.xml  selftest  server_c.gsl  specs.gsl
examples/Haskell/: LICENSE  MDClientAPI.hs  MDPDef.hs  MDWorkerAPI.hs  README  ZHelpers.hs  asyncsrv.hs  durapub.hs  durapub2.hs  durasub.hs  flcliapi.hs  flclient1.hs  flclient2.hs  flclient3.hs  flserver1.hs  flserver2.hs  flserver3.hs  hwclient.hs  hwserver.hs  identity.hs  interrupt.hs  lbbroker.hs  lpclient.hs  lpserver.hs  lruqueue.hs  lruqueue2.hs  mdbroker.hs  mdcliapi.hs  mdcliapi2.hs  mdclient.hs  mdclient2.hs  mdworker.hs  mdwrkapi.hs  mmiecho.hs  msgqueue.hs  mspoller.hs  msreader.hs  mtrelay.hs  mtserver.hs  peering1.hs  (+43 more)
examples/Rust/: Cargo.toml  README  hwclient.rs  hwserver.rs  interrupt.rs  lpclient.rs  lpserver.rs  msgqueue.rs  mspoller.rs  msreader.rs  mtrelay.rs  mtserver.rs  psenvpub.rs  psenvsub.rs  rrbroker.rs  rrclient.rs  rrworker.rs  syncpub.rs  syncsub.rs  syncsub.sh  tasksink.rs  taskvent.rs  taskwork.rs  taskwork2.rs  version.rs  wuclient.rs  wuproxy.rs  wuserver.rs
fragments/: README
images/: fig1.eps  fig1.html  fig1.txt  fig10.eps  fig10.html  fig10.txt  fig11.eps  fig11.html  fig11.txt  fig12.eps  fig12.html  fig13.eps  fig13.html  fig13.txt  fig14.eps  fig14.html  fig14.txt  fig15.eps  fig15.html  fig15.txt  fig16.eps  fig16.html  fig16.txt  fig17.eps  fig17.html  fig17.txt  fig18.eps  fig18.html  fig18.txt  fig19.eps  fig19.html  fig19.txt  fig2.eps  fig2.html  fig2.txt  fig20.eps  fig20.html  fig20.txt  fig21.eps  fig21.html  (+180 more)
issues/: issue1  issue1.c  issue2  issue2.c
site/: .bookmarks  config.toml
xl8n/: chapter1.txt
(+1936 files in other folders)
